Clean up and release 0.1.12 .